--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 log = "0.4.22"
-proptest = "1.5.0"
-proptest-state-machine = "0.3.0"
 serenity = "0.12.2"
 sqlite = "0.36.1"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+
+[dev-dependencies]
+proptest = "1.5.0"
+proptest-state-machine = "0.3.0"
