--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Automated Testing
 
 on:
   push:
@@ -7,11 +7,10 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag primaryrole:$(date +%s)
+    - name: "Run tests on the repo"
+      run: cargo test
