--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag primaryrole:$(date +%s)
+      run: docker build . --file Dockerfile --tag primaryrole
+    
+    - name: Save image
+      run: docker image save -o container.tar.gz primaryrole
+    
+    - name: Upload image as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Docker Container
+        path: container.tar.gz
