--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "discord_bot"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
+env_logger = "0.11.8"
+futures = "0.3.31"
 log = "0.4.22"
+phf = { version = "0.13.1", features = ["macros"] }
 serenity = "0.12.2"
 sqlite = "0.36.1"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
